--- a/RTVideoTcpServer/src/main/res/layout/activity_main.xml
+++ b/RTVideoTcpServer/src/main/res/layout/activity_main.xml
@@ -15,4 +15,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/image_view"/>
+
 </android.support.constraint.ConstraintLayout>
