--- a/RealTimeVideoSer/src/main/res/layout/activity_main.xml
+++ b/RealTimeVideoSer/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     <TextView
         android:id="@+id/sfv"
         android:layout_width="match_parent"
+        android:textSize="48sp"
+        android:textColor="@android:color/secondary_text_dark"
         android:layout_height="match_parent" />
 
     <SurfaceView
