--- a/RTVideoTcpClient/src/main/res/layout/activity_main.xml
+++ b/RTVideoTcpClient/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
 
 
 
-    <SurfaceView
+    <TextureView
         android:id="@+id/surface_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible">
-    </SurfaceView>
+        android:layout_width="480px"
+        android:layout_height="800px"
+        android:visibility="gone">
+    </TextureView>
 
     <EditText
         android:layout_width="wrap_content"
@@ -29,4 +29,21 @@
         android:text="Connect"
 
         android:layout_marginLeft="15dp"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+
+        android:padding="0dp">
+
+    <android.opengl.GLSurfaceView
+        android:id="@+id/my_gl_surface_view"
+        android:background="@color/colorPrimary"
+        android:layout_width="480px"
+        android:layout_height="800px"
+        android:visibility="visible"/>
+
+    </LinearLayout>
 </RelativeLayout>
