--- a/RealTimeVideo/src/main/res/layout/activity_main.xml
+++ b/RealTimeVideo/src/main/res/layout/activity_main.xml
@@ -9,5 +9,11 @@
         android:layout_height="match_parent"
         android:visibility="invisible" >
     </SurfaceView>
-
+    <com.test.realtimevideo.MyGLSurfaceView
+        android:id="@+id/my_gl_surface_view"
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"/>
 </RelativeLayout>
